--- a/src/app/content/MainBlock/MainBlock.module.scss
+++ b/src/app/content/MainBlock/MainBlock.module.scss
@@ -123,6 +123,7 @@
   .notesBlock {
     @include flex(row, space-evenly, center, wrap);
     width: 100%;
+    margin-bottom: 50px;
 
     .note {
       margin-top: 30px;
@@ -131,15 +132,20 @@
       border: 1px solid white;
 
       .noteTitle {
-
+        @include text(27px, 27px, 600);
+        width: 100%;
+        height: 80px;
       }
       .noteDescription {
+        width: 100%;
 
       }
       .noteTags {
+        width: 100%;
 
       }
       .noteButtons {
+        width: 100%;
 
       }
     }
