--- a/src/app/content/MainBlock/MainBlock.module.scss
+++ b/src/app/content/MainBlock/MainBlock.module.scss
@@ -16,61 +16,75 @@
   }
 
   .addNoteBlock {
-    @include flex(column, center, center, nowrap);
     height: 40vh;
     width: 100%;
 
-    .addTitle {
-      @include text(17px, 17px, 400);
-      width: 20%;
-      box-shadow: none;
-      box-sizing: border-box;
-      padding: 6px 12px;
-      border: none;
-      background-color: rgba(255,255,255,0.1);
-      color: rgba(255,255,255,0.7);
+    & form {
+      @include flex(column, center, center, nowrap);
+      width: 100%;
+      height: 100%;
 
-      &:focus {
-        outline: 1px solid rgba(0,0,0,0.2);
+      .error {
+        width: 20%;
+
+        @include text(15px, 15px, 500);
+        margin-top: 7px;
+        color: #bd1010;
+      }
+
+      .addTitle {
+        @include text(17px, 17px, 400);
+        width: 20%;
+        box-shadow: none;
+        box-sizing: border-box;
+        padding: 6px 12px;
+        border: none;
+        background-color: rgba(255,255,255,0.1);
+        color: rgba(255,255,255,0.7);
+
+        &:focus {
+          outline: 1px solid rgba(0,0,0,0.2);
+        }
+      }
+
+      .addDescription {
+        @include text(17px, 17px, 400);
+        width: 20%;
+        height: 60%;
+        margin: 10px 0 0;
+        padding: 6px 12px;
+        box-shadow: none;
+        border: none;
+        box-sizing: border-box;
+        resize: none;
+        background-color: rgba(255,255,255,0.1);
+        color: rgba(255,255,255,0.7);
+
+
+        &:focus {
+          outline: 1px solid rgba(0,0,0,0.2);
+        }
+      }
+
+      .addButton {
+        @include text(17px, 17px, 400);
+        width: 20%;
+        height: 40px;
+        margin: 10px;
+        cursor: pointer;
+        border: none;
+        background-color: rgba(255,255,255,0.2);
+        color: rgba(255,255,255,0.7);
+        transition: 0.2s ease-in-out;
+
+        &:hover {
+          color: rgba(255,255,255,0.9);
+          background-color: rgba(255,255,255,0.3);
+
+        }
       }
     }
 
-    .addDescription {
-      @include text(17px, 17px, 400);
-      width: 20%;
-      height: 60%;
-      margin: 10px 0 0;
-      padding: 6px 12px;
-      box-shadow: none;
-      border: none;
-      box-sizing: border-box;
-      resize: none;
-      background-color: rgba(255,255,255,0.1);
-      color: rgba(255,255,255,0.7);
-
-
-      &:focus {
-        outline: 1px solid rgba(0,0,0,0.2);
-      }
-    }
-
-    .addButton {
-      @include text(17px, 17px, 400);
-      width: 20%;
-      height: 40px;
-      margin: 10px;
-      cursor: pointer;
-      border: none;
-      background-color: rgba(255,255,255,0.2);
-      color: rgba(255,255,255,0.7);
-      transition: 0.2s ease-in-out;
-
-      &:hover {
-        color: rgba(255,255,255,0.9);
-        background-color: rgba(255,255,255,0.3);
-
-      }
-    }
   }
 
   .searchBlock {
