--- a/src/app/content/MainBlock/MainBlock.module.scss
+++ b/src/app/content/MainBlock/MainBlock.module.scss
@@ -4,7 +4,7 @@
 .mainBlock {
   @include flex(column, flex-start, center, nowrap);
   min-height: 100vh;
-  background-color: rgba(32,33,36,1);
+  background-color: rgba(32, 33, 36, 1);
 
   .titleBlock {
     @include flex(column, center, center, nowrap);
@@ -39,11 +39,11 @@
         box-sizing: border-box;
         padding: 6px 12px;
         border: none;
-        background-color: rgba(255,255,255,0.1);
-        color: rgba(255,255,255,0.7);
+        background-color: rgba(255, 255, 255, 0.1);
+        color: rgba(255, 255, 255, 0.7);
 
         &:focus {
-          outline: 1px solid rgba(0,0,0,0.2);
+          outline: 1px solid rgba(0, 0, 0, 0.2);
         }
       }
 
@@ -57,12 +57,12 @@
         border: none;
         box-sizing: border-box;
         resize: none;
-        background-color: rgba(255,255,255,0.1);
-        color: rgba(255,255,255,0.7);
+        background-color: rgba(255, 255, 255, 0.1);
+        color: rgba(255, 255, 255, 0.7);
 
 
         &:focus {
-          outline: 1px solid rgba(0,0,0,0.2);
+          outline: 1px solid rgba(0, 0, 0, 0.2);
         }
       }
 
@@ -73,18 +73,17 @@
         margin: 10px;
         cursor: pointer;
         border: none;
-        background-color: rgba(255,255,255,0.2);
-        color: rgba(255,255,255,0.7);
+        background-color: rgba(255, 255, 255, 0.2);
+        color: rgba(255, 255, 255, 0.7);
         transition: 0.2s ease-in-out;
 
         &:hover {
-          color: rgba(255,255,255,0.9);
-          background-color: rgba(255,255,255,0.3);
+          color: rgba(255, 255, 255, 0.9);
+          background-color: rgba(255, 255, 255, 0.3);
 
         }
       }
     }
-
   }
 
   .searchBlock {
@@ -98,8 +97,8 @@
       height: 40px;
       border-radius: 30px;
       border: 0;
-      color: rgba(255,255,255,1);
-      background-color: rgba(255,255,255,0.1);
+      color: rgba(255, 255, 255, 1);
+      background-color: rgba(255, 255, 255, 0.1);
       transition: width 0.3s ease-in-out;
       cursor: pointer;
       position: relative;
@@ -150,14 +149,17 @@
         width: 100%;
         height: 80px;
       }
+
       .noteDescription {
         width: 100%;
 
       }
+
       .noteTags {
         width: 100%;
 
       }
+
       .noteButtons {
         width: 100%;
 
