--- a/src/app/content/MainBlock/Modal/Modal.module.scss
+++ b/src/app/content/MainBlock/Modal/Modal.module.scss
@@ -14,15 +14,13 @@
   z-index: 1000;
 
   .modalContent {
-    @include flex(column, center, center, no-wrap);
-    width: 750px;
-    min-height: 200px;
-    border-radius: 20px;
-    background-color: white;
+    width: 350px;
+    height: 400px;
+    background-color: #37383a;
     position: relative;
 
     .closeBlock::after {
-      color: black;
+      color: white;
       content: "✖";
       cursor: pointer;
       font-weight: 300;
@@ -30,6 +28,49 @@
       position: absolute;
       right: 25px;
       top: 20px;
+    }
+
+    & form {
+      @include flex(column, center, center, no-wrap);
+
+      .noteTitleBlock {
+        @include flex(column, center, center, wrap);
+        width: 100%;
+        height: 80px;
+        background-color: rgb(77, 77, 80);
+
+        .title {
+          @include text(32px, 32px, 600);
+          color: white;
+          text-transform: uppercase;
+        }
+      }
+
+      .noteDescription {
+        @include flex(column, flex-start, center, wrap);
+        width: 100%;
+        height: 250px;
+        background-color: rgb(55, 56, 58);
+
+        .description {
+          @include text(16px, 22px, 500);
+          color: white;
+          width: 90%;
+          margin-top: 20px;
+        }
+      }
+
+      .noteButtons {
+        @include flex(row, space-evenly, center, wrap);
+        width: 100%;
+        height: 70px;
+        background-color: rgb(77, 77, 80);
+
+        .button {
+          width: 40%;
+          height: 30px;
+        }
+      }
     }
   }
 }
