--- a/src/app/content/MainBlock/Note/Note.module.scss
+++ b/src/app/content/MainBlock/Note/Note.module.scss
@@ -10,7 +10,7 @@
     @include flex(column, center, center, wrap);
     width: 100%;
     height: 80px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgb(77, 77, 80);
 
     .title {
       @include text(32px, 32px, 600);
@@ -23,7 +23,7 @@
     @include flex(column, flex-start, center, wrap);
     width: 100%;
     height: 200px;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgb(55, 56, 58);
 
     .description {
       @include text(16px, 22px, 500);
@@ -37,7 +37,7 @@
     @include flex(row, flex-start, center, wrap);
     width: 100%;
     height: 50px;
-    background-color: rgba(255,255,255,0.07);
+    background-color: rgb(48, 49, 51);
 
     .tagContainer {
       @include flex(column, center, center, wrap);
@@ -60,7 +60,7 @@
     @include flex(row, space-evenly, center, wrap);
     width: 100%;
     height: 70px;
-    background-color: rgba(255,255,255,0.2);
+    background-color: rgb(77, 77, 80);
 
     .button {
       width: 40%;
