--- a/src/app/content/MainBlock/Modal/Modal.module.scss
+++ b/src/app/content/MainBlock/Modal/Modal.module.scss
@@ -31,18 +31,28 @@
     }
 
     & form {
-      @include flex(column, center, center, no-wrap);
+      @include flex(column, center, center, nowrap);
 
       .noteTitleBlock {
-        @include flex(column, center, center, wrap);
+        @include flex(column, center, flex-start, wrap);
         width: 100%;
         height: 80px;
         background-color: rgb(77, 77, 80);
 
         .title {
+          margin-left: 25px;
           @include text(32px, 32px, 600);
           color: white;
+          background-color: rgb(77, 77, 80);
           text-transform: uppercase;
+          width: 260px;
+          outline: none;
+          border: 0;
+          border-bottom: 1px solid white;
+
+          &:focus {
+            border-bottom: 2px solid white;
+          }
         }
       }
 
@@ -56,7 +66,19 @@
           @include text(16px, 22px, 500);
           color: white;
           width: 90%;
+          height: 200px;
           margin-top: 20px;
+          background-color: rgb(55, 56, 58);
+          padding: 6px 12px;
+          box-shadow: none;
+          border: 1px solid white;
+          box-sizing: border-box;
+          resize: none;
+
+          &:focus {
+            outline: 0;
+            border: 2px solid white;
+          }
         }
       }
 
