--- a/src/app/content/MainBlock/MainBlock.module.scss
+++ b/src/app/content/MainBlock/MainBlock.module.scss
@@ -12,32 +12,35 @@
     .title {
       @include text(50px, 50px, 600);
       color: white;
+      margin: 30px 0 20px;
     }
   }
 
   .addNoteBlock {
-    height: 40vh;
     width: 100%;
+    margin: 10px 0 10px;
 
     & form {
-      @include flex(column, center, center, nowrap);
+      @include flex(column, flex-start, center, nowrap);
       width: 100%;
       height: 100%;
 
       .error {
-        width: 20%;
-
+        @media screen and (max-width: 1199px) {width: 70%}
         @include text(15px, 15px, 500);
+        width: 25%;
         margin-top: 7px;
         color: #bd1010;
       }
 
       .addTitle {
+        @media screen and (max-width: 1199px) {width: 70%}
         @include text(17px, 17px, 400);
-        width: 20%;
+        width: 25%;
+        height: 35px;
+        padding: 6px 12px;
         box-shadow: none;
         box-sizing: border-box;
-        padding: 6px 12px;
         border: none;
         background-color: rgba(255, 255, 255, 0.1);
         color: rgba(255, 255, 255, 0.7);
@@ -48,9 +51,10 @@
       }
 
       .addDescription {
+        @media screen and (max-width: 1199px) {width: 70%}
         @include text(17px, 17px, 400);
-        width: 20%;
-        height: 60%;
+        width: 25%;
+        min-height: 125px;
         margin: 10px 0 0;
         padding: 6px 12px;
         box-shadow: none;
@@ -60,17 +64,17 @@
         background-color: rgba(255, 255, 255, 0.1);
         color: rgba(255, 255, 255, 0.7);
 
-
         &:focus {
           outline: 1px solid rgba(0, 0, 0, 0.2);
         }
       }
 
       .addButton {
+        @media screen and (max-width: 1199px) {width: 70%}
         @include text(17px, 17px, 400);
-        width: 20%;
+        width: 25%;
         height: 40px;
-        margin: 10px;
+        margin: 10px 10px 0;
         cursor: pointer;
         border: none;
         background-color: rgba(255, 255, 255, 0.2);
@@ -80,7 +84,6 @@
         &:hover {
           color: rgba(255, 255, 255, 0.9);
           background-color: rgba(255, 255, 255, 0.3);
-
         }
       }
     }
@@ -88,23 +91,24 @@
 
   .searchBlock {
     @include flex(column, center, center, nowrap);
-    height: 7vh;
     width: 100%;
+    margin: 10px 0 10px;
 
     .search {
       @include text(15px, 15px, 600);
       width: 27px;
       height: 40px;
       border-radius: 30px;
+      padding-left: 15px;
       border: 0;
-      color: rgba(255, 255, 255, 1);
-      background-color: rgba(255, 255, 255, 0.1);
       transition: width 0.3s ease-in-out;
       cursor: pointer;
       position: relative;
-      padding-left: 15px;
+      color: rgba(255, 255, 255, 1);
+      background-color: rgba(255, 255, 255, 0.1);
 
       &:focus {
+        @media screen and (max-width: 1199px) {width: 65%}
         width: 19%;
         outline: none;
         padding-left: 20px;
@@ -113,18 +117,19 @@
   }
 
   .tagsBlock {
-    @include flex(row, center, center, nowrap);
-    min-height: 7vh;
+    @include flex(row, center, center, wrap);
+    min-height: 30px;
     width: 100%;
+    margin: 10px 0 10px;
 
     .tagContainer {
       @include flex(column, center, center, wrap);
-      background-color: rgb(255, 125, 0);
       min-width: 70px;
       height: 30px;
-      border-radius: 20px;
-      cursor: pointer;
       margin-right: 10px;
+      border-radius: 20px;
+      background-color: rgb(255, 125, 0);
+      cursor: pointer;
 
       .tag {
         @include text(17px, 17px, 600);
@@ -134,36 +139,12 @@
   }
 
   .notesBlock {
-    @include flex(row, space-evenly, center, wrap);
-    width: 100%;
-    margin-bottom: 50px;
-
-    .note {
-      margin-top: 30px;
-      width: 350px;
-      height: 400px;
-      border: 1px solid white;
-
-      .noteTitle {
-        @include text(27px, 27px, 600);
-        width: 100%;
-        height: 80px;
-      }
-
-      .noteDescription {
-        width: 100%;
-
-      }
-
-      .noteTags {
-        width: 100%;
-
-      }
-
-      .noteButtons {
-        width: 100%;
-
-      }
+    @include flex(row, flex-start, center, wrap);
+    @media screen and (max-width: 1199px) {
+      @include flex(column, flex-start, center, wrap);
+      margin-bottom: 0;
     }
+    width: 100%;
+    margin: 15px 0 30px;
   }
 }
