--- a/src/app/content/MainBlock/Note/Note.module.scss
+++ b/src/app/content/MainBlock/Note/Note.module.scss
@@ -2,14 +2,23 @@
 @import '../../../../common/styles/sass/variables';
 
 .note {
-  margin-top: 30px;
-  width: 350px;
-  height: 400px;
+  width: 22%;
+  margin-left: 38px;
+  margin-bottom: 40px;
+
+  @media screen and (max-width: 1440px) {
+    margin-left: 34px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    margin-left: 0;
+    width: 80%;
+  }
 
   .noteTitleBlock {
     @include flex(column, center, center, wrap);
     width: 100%;
-    height: 80px;
+    height: 60px;
     background-color: rgb(77, 77, 80);
 
     .title {
@@ -22,7 +31,7 @@
   .noteDescription {
     @include flex(column, flex-start, center, wrap);
     width: 100%;
-    height: 200px;
+    height: 180px;
     background-color: rgb(55, 56, 58);
 
     .description {
@@ -36,8 +45,10 @@
   .noteTags {
     @include flex(row, flex-start, center, wrap);
     width: 100%;
-    height: 50px;
+    min-height: 50px;
     background-color: rgb(48, 49, 51);
+    padding-top: 10px;
+    padding-bottom: 10px;
 
     .tagContainer {
       @include flex(column, center, center, wrap);
@@ -45,7 +56,7 @@
       min-width: 70px;
       height: 30px;
       border-radius: 20px;
-      cursor: pointer;
+      margin: 5px 0 5px;
       margin-left: 10px;
 
       .tag {
@@ -63,8 +74,20 @@
     background-color: rgb(77, 77, 80);
 
     .button {
+      @include flex(column, center, center, wrap);
       width: 40%;
       height: 30px;
+      @include text(17px, 17px, 500);
+      color: rgb(255, 255, 255);
+      background-color: rgb(48, 49, 51);
+      cursor: pointer;
+      transition: 0.2s ease-in-out;
+
+      &:hover {
+        background-color: rgb(255, 125, 0);
+        color: rgb(48, 49, 51);
+        outline: 0;
+      }
     }
   }
 }
